在说明文档中添加github仓库链接。

--- a/source/hanzibox.dtx
+++ b/source/hanzibox.dtx
@@ -27,12 +27,12 @@ Contributing
 ------------
 
 1. github repository:
-    1. repository: [hanzibox-l3](https://github.com/registor/hanzibox-l3)
-    2. Issues and pull requests are welcome. [issue](https://github.com/registor/hanzibox-l3/issues) or [pull request](https://github.com/registor/hanzibox-l3/pulls).
+    (1). repository: [hanzibox-l3](https://github.com/registor/hanzibox-l3)
+    (2). Issues and pull requests are welcome. [issue](https://github.com/registor/hanzibox-l3/issues) or [pull request](https://github.com/registor/hanzibox-l3/pulls).
 
 2. gitee repository:
-    1. repository: [hanzibox-l3](https://gitee.com/nwafu_nan/hanzibox-l3)
-    2. Issues and pull requests are welcome. [issue](https://gitee.com/nwafu_nan/hanzibox-l3/issues) or [pull request](https://gitee.com/nwafu_nan/hanzibox-l3/pulls).
+    (1). repository: [hanzibox-l3](https://gitee.com/nwafu_nan/hanzibox-l3)
+    (2). Issues and pull requests are welcome. [issue](https://gitee.com/nwafu_nan/hanzibox-l3/issues) or [pull request](https://gitee.com/nwafu_nan/hanzibox-l3/pulls).
 
 =======
 基于LaTeX3的带注音和译文的汉字练习宏包
@@ -52,12 +52,12 @@ Contributing
 ---------------------
 
 1. github仓库:
-    1. 仓库地址: [hanzibox-l3](https://github.com/registor/hanzibox-l3)
-    2. Issues和PR: [issue](https://github.com/registor/hanzibox-l3/issues) or [pull request](https://github.com/registor/hanzibox-l3/pulls).
+    (1). 仓库地址: [hanzibox-l3](https://github.com/registor/hanzibox-l3)
+    (2). Issues和PR: [issue](https://github.com/registor/hanzibox-l3/issues) or [pull request](https://github.com/registor/hanzibox-l3/pulls).
 
 2. gitee仓库:
-    1. 仓库地址: [hanzibox-l3](https://gitee.com/nwafu_nan/hanzibox-l3)
-    2. Issues and PR: [issue](https://gitee.com/nwafu_nan/hanzibox-l3/issues) or [pull request](https://gitee.com/nwafu_nan/hanzibox-l3/pulls).
+    (1). 仓库地址: [hanzibox-l3](https://gitee.com/nwafu_nan/hanzibox-l3)
+    (2). Issues and PR: [issue](https://gitee.com/nwafu_nan/hanzibox-l3/issues) or [pull request](https://gitee.com/nwafu_nan/hanzibox-l3/pulls).
 
 Copyright and Licence
 ---------------------
@@ -216,7 +216,7 @@ Copyright and Licence
 %
 % \title{\bfseries\pkg{hanzibox}：田字格-米字格汉字练习宏包}
 % \author{耿楠\\ \path{nangeng@nwafu.edu.cn}}
-% \date{\filedate\qquad\fileversion\thanks{\url{https://gitee.com/nwafu_nan/hanzibox-l3}.}}
+% \date{\filedate\qquad\fileversion\thanks{\url{https://github.com/registor/hanzibox-l3}}\thanks{\url{https://gitee.com/nwafu_nan/hanzibox-l3}.}}
 % \maketitle
 %
 % \changes{v2.0.0}{2021/09/28}{修订说明文档}
@@ -2003,7 +2003,7 @@ Copyright and Licence
           \dim_set:Nn \l_tmpa_dim { \coffin_wd:N \l_@@_pinyin_box_coffin }
           \draw_begin:
             \draw_linewidth:n { 0.4pt }
-            \color_stroke:n { hanziboxcrosscolor }
+            \color_stroke:n { hanziboxframecolor!50 }
 
             \draw_path_scope_begin:
               \@@_frame_type_c:n { pinyinlines }
